--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Pure CDN - Content Distribution Network-->
             <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-            <link type="text/css" rel="stylesheet" href="stylesheet.css">
+            <link type="text/css" rel="stylesheet" href="styleshit.css">
+            <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
         <!--[if lte IE 8]>
             <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
         <![endif]-->
@@ -16,11 +17,10 @@
 	</head>
 	<body>
 		<article>
-			<h1>Gorillaz í Laugardagshöllinni</h1>
+			<div id="title">
+				<h1>GORILLAZ Í LAUGARDALSHÖLL</h1>
+			</div>
 			
 		</article>
-		<footer>
-			
-		</footer>
 	</body>
 </html>
